# home-ledger

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  DATA_MODEL.md  PLAN.md  README.md  REQUIREMENTS_AUDIT.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.desktop-e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.desktop.conf.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.desktop-e2e.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_foundation.sql  0002_finance_events.sql  0003_supporting_workflows.sql  0004_default_reference_data.sql  0005_transaction_suggestions.sql  0006_daily_note_versions.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: attachment_service.rs  backup_service.rs  csv_import_service.rs  daily_note_service.rs  daily_summary_service.rs  event_service.rs  example_data_service.rs  filter_service.rs  financial_summary_service.rs  global_search_service.rs  local_ai_service.rs  mod.rs  recurring_service.rs  reference_data_service.rs  reminder_service.rs  report_export.rs  safe_query_service.rs  settings_service.rs  tax_export.rs  tax_service.rs  template_service.rs  transaction_service.rs
src-tauri/src/commands/: attachments.rs  backup.rs  csv_import.rs  daily_notes.rs  daily_summary.rs  events.rs  example_data.rs  filters.rs  financial_summary.rs  global_search.rs  local_ai.rs  mod.rs  recurring.rs  reference_data.rs  reminders.rs  safe_query.rs  settings.rs  system.rs  tax.rs  templates.rs  transactions.rs
src-tauri/src/domain/: attachments.rs  backup.rs  csv_import.rs  daily_notes.rs  daily_summary.rs  events.rs  example_data.rs  filters.rs  financial_summary.rs  global_search.rs  local_ai.rs  mod.rs  recurring.rs  reference_data.rs  reminders.rs  safe_query.rs  settings.rs  tax.rs  templates.rs  (+1 more)
(+96 files in other folders)
